crates/connectors/ndc-cockroach/tests/snapshots/query_tests__native_queries__select_artists_below_id.snap
---
source: crates/connectors/ndc-cockroach/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "AC/DC"
      },
      {
        "Name": "Accept"
      },
      {
        "Name": "Aerosmith"
      },
      {
        "Name": "Alanis Morissette"
      }
    ]
  }
]
