crates/connectors/ndc-cockroach/tests/snapshots/query_tests__native_queries__select_where_relationship.snap
---
source: crates/connectors/ndc-cockroach/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 10,
        "title": "Audioslave"
      },
      {
        "AlbumId": 254,
        "title": "Aquaman"
      },
      {
        "AlbumId": 272,
        "title": "Adorate Deum: Gregorian Chant from the Proper of the Mass"
      },
      {
        "AlbumId": 296,
        "title": "A Copland Celebration, Vol. I"
      }
    ]
  }
]
